# dino-evolution

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  aoba.txt  melhor_dino.txt  pyproject.toml
src/agents/: best_agent.json
src/app/: NeuralNetworkAgent.py  __main__.py  aoba.py  best_agent.py  dinogame.py  genetic_algorithm.py  genetic_dino_agent.py  training.py
src/scripts/: teste.py
