[tool.poetry]
name = "dino-evolution"
version = "1.0"
description = "Evolutionary Dinosaur A.I."
authors = ["Alexandre Magno <alexandre.pinho@aln.senaicimatec.edu.br>", "Pedro Barros <pedro.barros@aln.senaicimatec.edu.br>", "Rafael Luna <rafael.luna@aln.senaicimatec.edu.br>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.1"
chrome-trex = {git = "https://github.com/ArielMAJ/chrome-trex-rush", rev = "675c14aec93e7567ede9e3f5d78fbe65fd62dc99"}

[tool.poetry.group.dev.dependencies]
notebook = "^7.1.2"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
